tests/negative/gold/abstractA_test.gold
tests/negative/abstractA_test.toit:6:16: error: Field-storing parameter not allowed in abstract methods
  abstract foo .x
               ^~
tests/negative/abstractA_test.toit:10:16: error: Unresolved identifier: 'unresolved'
    return x + unresolved
               ^~~~~~~~~~
Compilation failed.
